syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.microservices.grpc.order";
option java_outer_classname = "OrderProto";

package order;

// ============================================
// ORDER SERVICE - gRPC Definitions
// ============================================

enum OrderStatus {
    PENDING = 0;
    CONFIRMED = 1;
    PROCESSING = 2;
    SHIPPED = 3;
    DELIVERED = 4;
    CANCELLED = 5;
}

message OrderItem {
    int64 product_id = 1;
    string product_name = 2;
    int32 quantity = 3;
    double unit_price = 4;
    double total_price = 5;
}

message Order {
    int64 id = 1;
    int64 user_id = 2;
    repeated OrderItem items = 3;
    double total_amount = 4;
    OrderStatus status = 5;
    string shipping_address = 6;
    string created_at = 7;
    string updated_at = 8;
}

message GetOrderRequest {
    int64 id = 1;
}

message GetOrdersByUserRequest {
    int64 user_id = 1;
}

message GetAllOrdersRequest {
    int32 page = 1;
    int32 size = 2;
}

message CreateOrderItemRequest {
    int64 product_id = 1;
    int32 quantity = 2;
}

message CreateOrderRequest {
    int64 user_id = 1;
    repeated CreateOrderItemRequest items = 2;
    string shipping_address = 3;
}

message UpdateOrderStatusRequest {
    int64 id = 1;
    OrderStatus status = 2;
}

message CancelOrderRequest {
    int64 id = 1;
    string reason = 2;
}

message OrderResponse {
    Order order = 1;
}

message OrdersResponse {
    repeated Order orders = 1;
    int32 total = 2;
}

message CancelResponse {
    bool success = 1;
    string message = 2;
}

service OrderService {
    rpc GetOrder(GetOrderRequest) returns (OrderResponse);
    rpc GetOrdersByUser(GetOrdersByUserRequest) returns (OrdersResponse);
    rpc GetAllOrders(GetAllOrdersRequest) returns (OrdersResponse);
    rpc CreateOrder(CreateOrderRequest) returns (OrderResponse);
    rpc UpdateOrderStatus(UpdateOrderStatusRequest) returns (OrderResponse);
    rpc CancelOrder(CancelOrderRequest) returns (CancelResponse);
}
