package com.microservices.order.client;

import com.microservices.grpc.user.*;
import io.grpc.StatusRuntimeException;
import lombok.extern.slf4j.Slf4j;
import net.devh.boot.grpc.client.inject.GrpcClient;
import org.springframework.stereotype.Service;

import java.util.Optional;

/**
 * Client gRPC SYNCHRONE pour User Service
 * Utilise le BlockingStub (appels bloquants)
 */
@Service
@Slf4j
public class UserGrpcClient {

    @GrpcClient("user-service")
    private UserServiceGrpc.UserServiceBlockingStub userStub;

    /**
     * R√©cup√©rer un utilisateur par ID
     */
    public Optional<User> getUser(Long userId) {
        log.info("üì° [gRPC Client] ‚Üí user-service.GetUser({})", userId);
        try {
            UserResponse response = userStub.getUser(
                    GetUserRequest.newBuilder().setId(userId).build()
            );
            log.info("‚úÖ [gRPC Client] User trouv√©: {}", response.getUser().getUsername());
            return Optional.of(response.getUser());
        } catch (StatusRuntimeException e) {
            log.error("‚ùå [gRPC Client] User non trouv√©: {}", e.getStatus());
            return Optional.empty();
        }
    }

    /**
     * V√©rifier si un utilisateur existe
     */
    public boolean userExists(Long userId) {
        return getUser(userId).isPresent();
    }

    /**
     * R√©cup√©rer le username d'un utilisateur
     */
    public String getUsername(Long userId) {
        return getUser(userId)
                .map(User::getUsername)
                .orElse("Unknown");
    }
}
